--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 		    <form action="https://formspree.io/f/xleodarb" method="POST" class="form">
               		<input type="text" class="text-field-2 w-input" maxlength="256" name="Story" data-name="Story" placeholder="100 character limit" id="Story">
 			<input type="text" class="text-field w-input" maxlength="256" name="Location" data-name="Location" placeholder="City / Suburb" id="Location" required="">
-			<input type="submit" value="Submit" data-wait="Please wait..." class="submit-button w-button"></form>
+			<input type="hidden" name="_next" value="//path/thankyou.html" />
+			    <input type="submit" value="Submit" data-wait="Please wait..." class="submit-button w-button"></form>
               <div class="w-form-done">
                 <div>Thank you! Your submission has been received!</div>
               </div>
