--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         // get the form data
         // there are many ways to get this data using jQuery (you can use the class or id also)
         var formData = {
-            'story'              : $('input[name=Story]').val(),
-            'location'             : $('input[name=Location]').val(),
+            'Story'              : $('input[name=Story]').val(),
+            'Location'             : $('input[name=Location]').val(),
             
         };
 
