--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             'location'             : $('input[name=location]').val(),
             
         };
-
+	console.log(fromData);
         // process the form
         $.ajax({
             type        : 'POST', // define the type of HTTP verb we want to use (POST for our form)
@@ -119,8 +119,8 @@
           <div class="form_container">
             <div class="form-block w-form">
 		    <form  method="POST" class="form">
-              		<input type="text" class="text-field-2 w-input" maxlength="256" name="story" data-name="story" placeholder="100 character limit" id="story">
-			<input type="text" class="text-field w-input" maxlength="256" name="location" data-name="location" placeholder="City / Suburb" id="location" required="">
+              		<input type="text" class="text-field-2 w-input" maxlength="256" name="story" placeholder="100 character limit" id="story">
+			<input type="text" class="text-field w-input" maxlength="256" name="location" placeholder="City / Suburb" id="location" required="">
 			<input type="hidden" name="_next" value="//path/thankyou.html" />
 			    <input type="submit" value="Submit" data-wait="Please wait..." class="submit-button w-button"></form>
               <div class="w-form-done">
