--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             'location'             : $('input[name=location]').val(),
             
         };
-	console.log(fromData);
+	console.log(formData);
         // process the form
         $.ajax({
             type        : 'POST', // define the type of HTTP verb we want to use (POST for our form)
