--- a/index.html
+++ b/index.html
@@ -123,11 +123,8 @@
 			<input type="text" class="text-field w-input" maxlength="256" name="location" placeholder="City / Suburb" id="location" required="">
 			<input type="hidden" name="_next" value="//path/thankyou.html" />
 			    <input type="submit" value="Submit" data-wait="Please wait..." class="submit-button w-button"></form>
-              <div id="formdone" class="w-form-done">
+              <div id="formdone" class="success">
                 <div>Thank you! Your submission has been received!</div>
-              </div>
-              <div class="w-form-fail">
-                <div>Oops! Something went wrong while submitting the form.</div>
               </div>
             </div>
           </div>
